--- a/l200207/frontEndCleanShrad/src/app/portal/portal.component.html
+++ b/l200207/frontEndCleanShrad/src/app/portal/portal.component.html
@@ -222,11 +222,13 @@
               <p class=" font-weight-bold" *ngIf="recordlist.show">{{recordlist.title}}</p>
               <div class="row p-2" *ngIf="recordlist.show">
                 <div class="col-4 p-4" *ngFor="let crecordlist of recordlist.detail">
-                  <mdb-icon fas icon={{crecordlist.icon}}></mdb-icon>&nbsp;
-                  <label class="ml-2" [attr.contentEditable]=editabel required
-                    *ngFor="let labelel of crecordlist.record">
-                    <span class="updatedetail" id={{labelel.key}}>{{labelel.value}}</span>
-                  </label>&nbsp;&nbsp;
+                  <div *ngIf="crecordlist.show">
+                    <mdb-icon fas icon={{crecordlist.icon}}></mdb-icon>&nbsp;
+                    <label class="ml-2" [attr.contentEditable]=editabel required
+                      *ngFor="let labelel of crecordlist.record">
+                      <span class="updatedetail" id={{labelel.key}}>{{labelel.value}}</span>
+                    </label>&nbsp;&nbsp;
+                  </div>
                 </div>
               </div>
             </div>
