--- a/l200207/frontEndCleanShrad/src/app/portal/portal.component.scss
+++ b/l200207/frontEndCleanShrad/src/app/portal/portal.component.scss
@@ -1,7 +1,7 @@
 #backgroundRGraph{position: absolute;height: 100%;width: 100%;}
 #hierarchy{height: 100%;width: 100%;} 
 
-#buttPlus{
+.buttPlus{
     position: absolute;
     right: 0.2em;
     bottom: 0.2em;
