--- a/l200207/frontEndCleanShrad/src/app/admin/admin.component.html
+++ b/l200207/frontEndCleanShrad/src/app/admin/admin.component.html
@@ -38,7 +38,7 @@
           <div class="scrollbar m-4">
             <div *ngFor="let manual of userdata.manual.data" class="overflow text-white font-weight-bold">
               <div class="row p-3 text-center">
-                <div class="col-3 ml-1 text-white">{{manual.data}}</div>
+                <div class="col-3 ml-1 text-white">{{manual.name}}</div>
                 <div class="col-3 ml-1 text-white">{{manual.inid}}</div>
                 <div class="col-3 ml-1 text-white">{{manual.outid}}</div>
                 <div class="col-2 ml-1 text-white">
