--- a/l200207/frontEndCleanShrad/src/app/portal/portal.component.html
+++ b/l200207/frontEndCleanShrad/src/app/portal/portal.component.html
@@ -1,11 +1,12 @@
+<app-topbar></app-topbar>
 <div class="masterDiv">
-  <app-topbar></app-topbar>
   <section id="backgroundRGraph" class="bg-dark">
     <div id="hierarchy"></div>
   </section>
-  <mdb-icon  *ngIf="addButton" class="text-white buttPlus" fas icon="plus-circle" (click)="clicked('addUser')"></mdb-icon>
+  <mdb-icon *ngIf="addButton" class="text-white buttPlus" fas icon="plus-circle" (click)="clicked('addUser')">
+  </mdb-icon>
   <div mdbModal #addUsers="mdbModal" [config]="{backdrop: 'static'}" class="modal fade left" tabindex="-1" role="dialog"
-    aria-labelledby="myModalLabel" aria-hidden="true">
+  style="overflow-x: hidden;overflow-y: auto;"  aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header text-center p-2 border border-white">
@@ -188,9 +189,8 @@
       </div>
     </div>
   </div>
-  <div mdbModal #hierachyView="mdbModal" [config]="{backdrop: 'static'}" class="modal"
-    style="overflow-x: hidden;overflow-y: auto;" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
-    aria-hidden="true">
+  <div mdbModal #hierachyView="mdbModal" [config]="{backdrop: 'static'}" class="modal" tabindex="-1" role="dialog"
+  style="overflow-x: hidden;overflow-y: auto;" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
       <div class="modal-content">
         <div class="modal-header border border-white">
@@ -250,21 +250,23 @@
         <div class="modal-body">
           <div #printslip>
             <div *ngFor="let salarydata of salaryslipJson.data">
-            <div class="p-3 font-weight-bold border border-light">
-              <p>{{salarydata.title}} - <span *ngIf="salarydata.total">{{salarydata.total}}</span></p>
-            </div>
-            <table mdbTable bordered="true" class="sal_table">
-              <tr *ngFor="let codata of salarydata.detail">
-                <th class="font-weight-bold">{{codata.head}}</th>
-                <td>{{codata.value}}</td>
-              </tr>
-            </table>
+              <div class="p-3 font-weight-bold border border-light">
+                <p>{{salarydata.title}} - <span *ngIf="salarydata.total">{{salarydata.total}}</span></p>
+              </div>
+              <table mdbTable bordered="true" class="sal_table">
+                <tr *ngFor="let codata of salarydata.detail">
+                  <th class="font-weight-bold">{{codata.head}}</th>
+                  <td>{{codata.value}}</td>
+                </tr>
+              </table>
             </div>
           </div>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-lg btn-dark text-white" (click)="clicked('printsalaryslip')">Print Slip</button>
+          <button type="button" class="btn btn-lg btn-dark text-white" (click)="clicked('printsalaryslip')">Print
+            Slip</button>
         </div>
       </div>
     </div>
   </div>
+</div>
