--- a/l200207/frontEndCleanShrad/src/app/topbar/topbar.component.html
+++ b/l200207/frontEndCleanShrad/src/app/topbar/topbar.component.html
@@ -20,14 +20,6 @@
             </ul>
           </div>
         </div>
-        <!-- <li class="nav-item">
-          <div class="btn-group" mdbDropdown>
-            <a mdbDropdownToggle class="dropdown-toggle  waves-light" mdbWavesEffect>
-               Menu 
-            </a>
-     
-          </div>
-        </li> -->
       </ul>
     </links>
   </mdb-navbar>
@@ -42,12 +34,13 @@
           <h4 class="modal-title w-100 text-center" id="myModalLabel">Sign In</h4>
         </div>
         <div class="modal-body">
-          <div class="md-form mb-5">
+          <form action="">
+            <div class="md-form mb-5">
             <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
             <input type="email" (input)="email=$event.target.value" class="form-control" mdbInput>
             <label for="defaultForm-email">Email</label>
-          </div>
-          <div class="md-form mb-4">
+            </div>
+            <div class="md-form mb-4">
             <mdb-icon fas icon="lock" class="prefix"></mdb-icon>
             <input type="password" (input)="password=$event.target.value" (keydown.enter)="callFunction('LOGIN')"
               #showhide_event class="form-control" mdbInput>
@@ -56,7 +49,8 @@
               <i class="fas fa-eye-slash showpassword" (click)="passwordView('password','text',showhide_event)"></i>
             </span>
             <label for="defaultForm-pass">Password</label>
-          </div>
+            </div>
+          </form>
           <a id="forpassword" (click)="clicked('forgetpassword')" class="dark-text ml-1">Forgot
             Password?</a>
         </div>
