--- a/l200207/frontEndCleanShrad/src/app/topbar/topbar.component.html
+++ b/l200207/frontEndCleanShrad/src/app/topbar/topbar.component.html
@@ -10,6 +10,9 @@
               <mdb-icon fas icon="{{butt.icon}}"></mdb-icon>{{butt.name}}<span class="sr-only"></span>
             </a>
           </li>
+          <li>
+            <img src="../../assets/images/main.png"  alt="" style="height: 3em;width: 3em;border-radius: 5em;">
+          </li>
           <div class="dropdown-menu dropdown-primary pl-0 pr-4">
             <ul>
               <li style="text-decoration: none;list-style-type: none;" *ngFor="let menudrop of portalmenuDropdown">
