--- a/l200207/frontEndCleanShrad/src/app/topbar/topbar.component.html
+++ b/l200207/frontEndCleanShrad/src/app/topbar/topbar.component.html
@@ -11,7 +11,7 @@
             </a>
           </li>
           <li>
-            <img src={{profilepic}} alt="" style="height: 3em;width: 3em;border-radius: 5em;">
+            <img src={{profilepic}} alt="Image not Found" style="height: 3em;width: 3em;border-radius: 5em;">
           </li>
           <div class="dropdown-menu dropdown-primary pl-0 pr-4">
             <ul>
