--- a/l200207/frontEndCleanShrad/src/app/home/home.component.scss
+++ b/l200207/frontEndCleanShrad/src/app/home/home.component.scss
@@ -8,9 +8,10 @@
 }
   .clicktop{
     position: fixed;
-    bottom: 0.5em;
-    right: 0.5em;
+    bottom: 0.7em;
+    right: 0.7em;
     font-size: 2.5em;
+    z-index:5;
   }
   #demo_logincredentail{
     position: fixed;
