--- a/l200207/frontEndCleanShrad/src/app/topbar/topbar.component.html
+++ b/l200207/frontEndCleanShrad/src/app/topbar/topbar.component.html
@@ -1,94 +1,34 @@
-<div class="fixed-top bg-dark">
-  <mdb-navbar SideClass="navbar navbar-expand-sm navbar-dark" [containerInside]="false">
-    <mdb-navbar-brand><a class="navbar-brand" routerLink = "">HRMS</a></mdb-navbar-brand>
+<div class="bg-dark">
+  <mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark" [containerInside]="false">
+    <mdb-navbar-brand>
+      <a class="navbar-brand" routerLink="">HRMS</a>
+      <span class="font-weight-bold text-white" style="font-size: 0.5em;">powered by</span>
+      <a href="https://www.edeitic.com" class="text-white">EISLABS®</a>
+    </mdb-navbar-brand>
     <links>
-      <ul class="navbar-nav ml-auto">
-        <div class="btn-group" mdbDropdown>
-          <li class="nav-item" *ngFor="let butt of topBarElements">
-            <a class={{butt.class}} mdbDropdownToggle mdbWavesEffect [attr.href]="butt.href ? butt.href : null"
-              (click)='butt.clickFun ? butt.clickFun() : null' *ngIf="butt.show">
-              <mdb-icon fas icon="{{butt.icon}}"></mdb-icon>{{butt.name}}<span class="sr-only"></span>
-            </a>
-          </li>
-          <li>
-            <img src={{profilepic}} alt="Image not Found" style="height: 3em;width: 3em;border-radius: 5em;">
-          </li>
-          <div class="dropdown-menu dropdown-primary pl-0 pr-4">
-            <ul>
-              <li style="text-decoration: none;list-style-type: none;" *ngFor="let menudrop of portalmenuDropdown">
-                <a *ngIf="menudrop.show" class={{menudrop.class}} style="font-size: 1.6em;"
-                  (click)='menudrop.clickFun ? menudrop.clickFun() : null'>
-                  <mdb-icon fas icon="{{menudrop.icon}}"></mdb-icon>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
+      <ul class="navbar-nav ml-auto nav-flex-icons">
+        <li class="nav-item" *ngFor="let butt of topBarElements">
+          <a class="nav-link" mdbDropdownToggle mdbWavesEffect [attr.href]="butt.href ? butt.href : null"
+            (click)='butt.clickFun ? butt.clickFun() : null' *ngIf="message.beforelogin">
+            <mdb-icon fas icon="{{butt.icon}}"></mdb-icon>{{butt.name}}<span class="sr-only"></span>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" *ngIf=message.afterlogin>
+            <app-notification></app-notification>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" *ngIf=message.beforelogin style='z-index: 1;'>
+            <app-loginregistration></app-loginregistration>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" *ngIf=message.afterlogin>
+            <app-profile></app-profile>
+          </a>
+        </li>
       </ul>
     </links>
   </mdb-navbar>
-  <div mdbModal #loginmodal="mdbModal" class="modal fade" [config]="{backdrop: 'static'}" tabindex="-1" role="dialog"
-    aria-labelledby="myBasicModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-md modal-side modal-top-right" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close pull-right" aria-label="Close" (click)="clicked('hideLoginModel')">
-            <span aria-hidden="true">×</span>
-          </button>
-          <h4 class="modal-title w-100 text-center" id="myModalLabel">Sign In</h4>
-        </div>
-        <div class="modal-body">
-          <form action="">
-            <div class="md-form mb-5">
-              <mdb-icon fas icon="envelope" class="prefix"></mdb-icon>
-              <input type="email" (input)="email=$event.target.value" class="form-control" mdbInput>
-              <label for="defaultForm-email">Email</label>
-            </div>
-            <div class="md-form mb-4">
-              <mdb-icon fas icon="lock" class="prefix"></mdb-icon>
-              <input type="password" (input)="password=$event.target.value" (keydown.enter)="callFunction('LOGIN')"
-                #showhide_event class="form-control" mdbInput>
-              <span id="password_viewhide">
-                <i class="fas fa-eye showtext" (click)="passwordView('text','password',showhide_event)"></i>
-                <i class="fas fa-eye-slash showpassword" (click)="passwordView('password','text',showhide_event)"></i>
-              </span>
-              <label for="defaultForm-pass">Password</label>
-            </div>
-          </form>
-          <a id="forpassword" (click)="clicked('forgetpassword')" class="dark-text ml-1">Forgot
-            Password?</a>
-        </div>
-        <div class="modal-footer">
-          <button type="button" mdbBtn color="dark" (click)="callFunction('LOGIN')" class="relative waves-light"
-            mdbWavesEffect>Login</button>
-        </div>
-      </div>
-    </div>
-  </div>
-  <div mdbModal #notificationmodal="mdbModal" class="modal fade" [config]="{backdrop: 'static'}" tabindex="-1" role="dialog"
-    aria-labelledby="myBasicModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-side modal-top-right" role="document">
-      <div class="modal-content">
-        <div class="modal-header border border-white">
-          <a (click)="clicked('hidenotificationModel')" style="font-size: 1.5em;" class="text-left">
-            <mdb-icon fas icon="chevron-circle-left"></mdb-icon>
-           </a>
-           <h4 class="modal-title w-100 text-center font-weight-bold" id="myModalLabel">
-            <mdb-icon fas icon="bell"></mdb-icon> Notifications 
-            </h4>
-        </div>
-        <div class="modal-body border border-white">
-          <div *ngFor="let shownotification of notification">
-             <div class="row p-1 font-weight-bold">
-               <div class="col-5 text-dark">{{shownotification.whom}}</div>
-               <div class="col-4 text-dark">{{shownotification.why}}</div>
-               <div class="col-3 text-dark">{{shownotification.when}}</div>
-             </div>
-          </div>
-        </div>
-        <div class="modal-footer border border-white">
-        </div>
-      </div>
-    </div>
-  </div>
 </div>
