--- a/l200207/frontEndCleanShrad/src/app/topbar/topbar.component.scss
+++ b/l200207/frontEndCleanShrad/src/app/topbar/topbar.component.scss
@@ -1,19 +1,89 @@
-.modal-backdrop{
-  display:none;
+
+// .modal-backdrop{
+//   display:none;
+// }
+// .showpassword{
+//   display:none;
+// }
+// #password_viewhide{
+//     position: absolute;   
+//     top:0.3em;
+//     right:0em;
+//     font-size: 1.4em;
+//   }
+//   .modal-open .modal {
+//     width: 2px;
+//     margin: 0 auto;
+// }
+// .modal-backdrop {
+//   display: none !important;
+// }
+.profilepic {
+  position: absolute;
+  height: 1.8em;
+  width: 1.8em;
 }
-.showpassword{
-  display:none;
+.inlinePic {
+  display: inline;
 }
-#password_viewhide{
-    position: absolute;   
-    top:0.3em;
-    right:0em;
-    font-size: 1.4em;
-  }
-  .modal-open .modal {
-    width: 2px;
-    margin: 0 auto;
+.dragdropAlgo {
+  border: 0.3em dashed #4285f4 !important;
+  margin: auto;
 }
-.modal-backdrop {
-  display: none !important;
+#pfp {
+  font-size: 1.1em;
+  font-weight: bolder;
+  border-radius: 10em;
+  background: white;
+  width: 1.5em;
+  height: 1.5em;
+  line-height: 1.5em;
+  text-align: center;
+}
+//@import url(https://fonts.googleapis.com/css?family=Open + Sans:400, 300, 600, 700, 800);
+body {
+  font-family: "Open Sans", sans-serif;
+}
+.head {
+  font-size: 25px;
+  font-weight: 200;
+}
+.blue-btn {
+  background: transparent;
+  border: solid 1px white;
+  border-radius: 3px;
+  color: white;
+  font-size: 16px;
+  margin-bottom: 20px;
+  outline: none !important;
+  padding: 1em 2em;
+}
+.fileUpload {
+  position: relative;
+  overflow: hidden;
+  height: auto;
+  margin-top: 0;
+}
+
+.fileUpload input.uploadlogo {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  cursor: pointer;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  width: 100%;
+  height: 1em;
+}
+/*Chrome fix*/
+input::-webkit-file-upload-button {
+  cursor: pointer !important;
+  height: 42px;
+  width: 100%;
+}
+.iconsanno {
+  font-size: 0.7em;
+  padding-right: 0.7em;
 }
