--- a/l200207/frontEndCleanShrad/src/app/profile/profile.component.html
+++ b/l200207/frontEndCleanShrad/src/app/profile/profile.component.html
@@ -12,7 +12,7 @@
       <li>
         <a class="dropdown-item waves-light font-weight-bold" style="font-size: 1em;" mdbWavesEffect
           routerLink='admin'>
-          <mdb-icon fas icon="cog"></mdb-icon> Admin
+          <mdb-icon fas icon="user-shield"></mdb-icon> Admin
         </a>
       </li>
       <li>
