--- a/l200207/frontEndCleanShrad/src/app/home/home.component.html
+++ b/l200207/frontEndCleanShrad/src/app/home/home.component.html
@@ -4,7 +4,7 @@
       <div class="p-3">
         <mdb-carousel [animation]="'slide'" class="z-depth-3">
           <mdb-carousel-item *ngFor="let imgName of ['portal_31', 'adminpage_31']">
-            <img class="d-block w-100" src="../../assets/images/{{imgName}}.png">
+            <img class="d-block w-100" src="../../assets/images/{{imgName}}.png" alt="Slider image not found">
           </mdb-carousel-item>
         </mdb-carousel>
         <div class="p-4 z-depth-3">
