--- a/l200207/frontEndCleanShrad/src/app/profile/profile.component.html
+++ b/l200207/frontEndCleanShrad/src/app/profile/profile.component.html
@@ -1,6 +1,6 @@
 <div class="btn-group" mdbDropdown>
   <div mdbDropdownToggle>
-    <img src={{profilePic}} alt="" style="height:1.6em;width:1.6em;" class="inlinePic">
+    <img src={{profilePic}} alt="Profile not found" style="height:1.6em;width:1.6em;" class="inlinePic">
   </div>
   <div style="font-size: 0.9em;" class="dropdown-menu dropdown-menu-right dropdown-primary">
     <div class="p-1">
