--- a/l200207/frontEndCleanShrad/src/app/portal/portal.component.scss
+++ b/l200207/frontEndCleanShrad/src/app/portal/portal.component.scss
@@ -8,3 +8,23 @@
     z-index: 2;
     cursor: pointer;
   }
+  #usersDp{
+    height: 5em;
+    width: 5em;
+    border-radius: 5em;
+    margin-left: 2em;
+  }
+  #updprofile{
+    position: absolute;
+    top: 3.8em;
+    left: 6.1em;
+    border-radius: 4em;
+    overflow: hidden;
+  }
+  .profilePic ,input[type="file"]{
+    position: absolute;
+    font-size: 50px;
+    opacity: 0;
+    right: 0;
+    top: 0;
+  }
