--- a/l200207/frontEndCleanShrad/src/styles.scss
+++ b/l200207/frontEndCleanShrad/src/styles.scss
@@ -1,6 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~fullcalendar/dist/fullcalendar.min.css';
-body{
-    overflow:hidden;
+@import "~fullcalendar/dist/fullcalendar.min.css";
+body {
+    overflow: hidden;
     box-sizing: content-box;
-   }
+}
+.textData {
+    display: none;
+}
